Table Export kütüphanesi tekrar online olarak düzenlendi.

--- a/NOVA/Views/Home/Index.cshtml
+++ b/NOVA/Views/Home/Index.cshtml
@@ -8,15 +8,18 @@
 
 
 <head>
+    <link href="~/bootstrap-icons-1.11.2/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link href="~/assets/css/border.css" rel="stylesheet" />
     <style>
-        .bx-menu{
-            display:none !important
+        .bx-menu {
+            display: none !important
         }
+
         body {
             padding: 0 0 0 3rem !important;
-            overflow:hidden;
+            overflow: hidden;
         }
+
         .bg-footer-theme {
             background-color: transparent !important;
             color: #697a8d;
@@ -515,7 +518,9 @@
                                                         </tr>
                                                     </thead>
                                                     <tbody class="table-border-bottom-0">
-                                                        @{ var offlineusers = ViewBag.OfflineUsers; int b = 0;}
+                                                        @{ var offlineusers = ViewBag.OfflineUsers; int b = 0;
+
+}
                                                         <tr>
                                                             <td>
                                                                 <ul id="offlines" class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
@@ -536,7 +541,8 @@
                                             </div>
 
                                         </div>
-            }
+}
+
                     }
                         
 
@@ -604,7 +610,11 @@
         });
     });
         function script() {
-            ShowProgress()
+            var role =@Html.Raw(Json.Encode(Request.Cookies["RoleName"].Value));
+            if (role != 'uretim4') {
+
+                ShowProgress()
+            }
             $("#divPartial").show();
             document.getElementById("anasayfa").className = "menu-item active";
        
