--- a/NOVA/Views/Shared/_Layout.cshtml
+++ b/NOVA/Views/Shared/_Layout.cshtml
@@ -146,21 +146,13 @@
     </div>
 
     <div class="layout-overlay layout-menu-toggle"></div>
-    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
-    <script src="~/Scripts/tableExport.min.js"></script>
-    <script src="~/Scripts/bootstrap-table.min.js"></script>
-    <script src="~/Scripts/tableLocale.js"></script>
-    <script src="~/Scripts/table-filter.min.js"></script>
-    <script src="~/Scripts/table-mobile.js"></script>
-    <script src="~/Scripts/table-sticky-header.js"></script>
-    <script src="~/Scripts/table-fixed.js"></script>
-    <script src="~/Scripts/tablednd.min.js"></script>
-    <script src="~/Scripts/table-reorder-rows.min.js"></script>
-    <script src="~/Scripts/table-groupby.min.js"></script>
-    <script src="~/jsPDF/jspdf.umd.min.js"></script>
-    <script src="~/jsPDF/polyfills.umd.min.js"></script>
+    <link href="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/tableExport.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF/jspdf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/extensions/export/bootstrap-table-export.min.js"></script>
     <script src="~/Scripts/xlsx.core.min.js"></script>
-
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
