--- a/NOVA/Views/Satis/Index.cshtml
+++ b/NOVA/Views/Satis/Index.cshtml
@@ -215,7 +215,7 @@
                            data-toggle="table"
                            data-show-export="true"
                            data-export-data-type="all"
-                           data-export-types="['excel']"
+                           data-export-types="['xlsx']"
                            data-pagination="true"
                            data-search="true"
                            data-toolbar="#toolbar2"
