--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -8,6 +8,8 @@
     <title>Nova | Efece Galvaniz</title>
 
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
     <link href="\assets\boxicons-2.1.2\css\animations.css" rel="stylesheet" type="text/css" />
     <link href="\assets\boxicons-2.1.2\css\transformations.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\core.css" class="template-customizer-core-css" />
@@ -277,6 +279,7 @@
     <script type="text/javascript" src="/assets/vendor/js/menu.js"></script>
     <script type="text/javascript" src="/assets/js/main.js"></script>
     <script type="text/javascript" src="/assets/js/dashboards-analytics.js"></script>
+
 
     @RenderSection("scripts", required: false)
 </body>
