--- a/NOVA/Views/YonetimPaneli/Kullanici.cshtml
+++ b/NOVA/Views/YonetimPaneli/Kullanici.cshtml
@@ -12,7 +12,7 @@
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-
+<script src="~/Scripts/jqueryui-min.js"></script>
 <style>
     body {
         padding: 0 0 0 4rem !important;
@@ -253,10 +253,10 @@ return data;
                 <span data-bs-toggle="modal" data-bs-target="#modalModul">
                     <button data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bxs-info-circle bx-xs' ></i> <span>Yeni Modül Ekleme Formunu Açar</span>" class="btn btn-secondary bx bxs-spreadsheet">
                     </button>
-                </span>
-                <select id="filter" multiple="multiple" name="filterAlgorithm">
+                </span> 
+                <select id="filter" multiple="multiple" name="filterAlgorithm" style="width:50%">
                 </select>
-                <select id="filter2" multiple="multiple" name="filterAlgorithm2">
+                <select id="filter2" multiple="multiple" name="filterAlgorithm2" style="width:50%">
                 </select>
             </div>
             <div class="buttons-toolbar mt-2 mb-2">
@@ -522,17 +522,11 @@ return data;
         }
         var last = null;
         $(document).ready(function () {
-            if ($(window).width() < 600) {
-                $("#divPartial2").show();
-                document.getElementById("yonetimpaneli").className = "menu-item open active";
-                document.getElementById("kullanici").className = "menu-item active";
-            }
-            else {
+        
                 $("#divPartial").show();
 
                 document.getElementById("yonetimpaneli1").className = "nav__link active";
                 document.getElementById("kullanici1").className = "nav__dropdown-item active";
-            }
 
             getModulesAsync().then(function (data) {
                 modules = data;
@@ -574,7 +568,7 @@ return data;
 
         }).ajaxComplete(function () {
 
-            $('.select2clss').select2({width:"100%"}).on('change', function () {
+            $('.select2clss').select2({width:"50%"}).on('change', function () {
                 changesel(this.parentNode.parentNode.rowIndex);
             });
 
@@ -641,9 +635,9 @@ return data;
             }
             else if (value == 2) {
 
-                $('#filter').select2({ placeholder: 'Kullanıcı Filtreleme', width: '90%', float: 'end' });
+                $('#filter').select2({ placeholder: 'Kullanıcı Filtreleme', width: '50%', float: 'end' });
                 $('#filter').show();
-                $('#filter2').select2({ placeholder: 'Modül Filtreleme', width: '90%', float: 'end' });
+                $('#filter2').select2({ placeholder: 'Modül Filtreleme', width: '50%', float: 'end' });
                 $('#filter2').show();
                 $('#table').bootstrapTable('destroy');
                 $('#table').bootstrapTable({
