--- a/NOVA/Views/IK/PersonelPuantaj.cshtml
+++ b/NOVA/Views/IK/PersonelPuantaj.cshtml
@@ -288,26 +288,28 @@
                                     $.getJSON(urlbitis, function (data) {
 
                                     }).done(function () {
+
+                                        HideProgress()
                                         Swal.fire(
                                             'Başarılı!',
                                             'İşlem başarılı',
                                             'success'
                                         ).then((result) => {
                                             if (result.isConfirmed) {
-                                                HideProgress()
                                         $("#select").trigger('change')
 
                                     }
                                 })
                                     })
                                 } else {
+
+                                    HideProgress()
                                     Swal.fire(
                                         'Başarılı!',
                                         'İşlem başarılı',
                                         'success'
                                     ).then((result) => {
                                         if (result.isConfirmed) {
-                                            HideProgress()
                                             $("#select").trigger('change')
 
                                         }
@@ -343,12 +345,13 @@
                             $.getJSON(urlbitis, function (data) {
 
                             }).done(function () {
+
+                                HideProgress()
                                 Swal.fire(
                                     'Başarılı!',
                                     'İşlem başarılı',
                                     'success'
                                 ).then(function () {
-                                    HideProgress()
                                     $("#select").trigger('change');
                                 })
                             })
@@ -358,12 +361,13 @@
                 }
 
             } else {
+
+                HideProgress()
                 Swal.fire(
                     '',
                     'Tüm alanları doldurduğunuzdan emin olun',
                     'warning'
                 ).then(function () {
-                    HideProgress()
                     $("#select").trigger('change');
                 })
             }
@@ -384,12 +388,13 @@
                             dataType: "json",
                             data: d,
                             success: function (msg) {
+
+                                HideProgress()
                                 Swal.fire(
                                     'Başarılı!',
                                     'İşlem başarılı',
                                     'success'
                                 ).then(function () {
-                                    HideProgress()
                                     $("#select").trigger('change');
                                 })
                             },
@@ -1436,8 +1441,8 @@
                         }).done(function () {
                             if (c == true) {
                                 var d = { START_INCKEY: inc, END_INCKEY: incend, USER_ID: userid, DATE: tarih, START_DATE: tarih + " " + bas, END_DATE: tarih + " " + bit, OFFDAY_CODE: null, CONFIRM_CODE: 1 }
-
-                                $.ajax({
+                                if (incend != 0) {
+                                    $.ajax({
                                         type: "POST",
                                         url: "@Url.Action("PostDataMesai")",
                                         dataType: "json",
@@ -1459,6 +1464,35 @@
                                         },
                                         error: function (msg) { alert(JSON.stringify(msg)); }
                                     });
+
+                                } else {
+                                    var p = { "DATE": tarih + " " + bit, "USER_ID": userid, "START_INCKEY": inc }
+                                    
+                                    $.ajax({
+                                        type: "POST",
+                                        url: "http://192.168.2.13:83/api/attendance/manualend",
+                                        contentType: 'application/json',
+                                        data: JSON.stringify(p),
+                                        success: function (msg) {
+                                            HideProgress()
+                                            Swal.fire(
+                                                'Başarılı!',
+                                                'İşlem başarılı',
+                                                'success'
+                                            ).then((result) => {
+                                                if (result.isConfirmed) {
+                                                    $("#select").trigger('change')
+
+                                                }
+                                            })
+
+
+                                        },
+                                        error: function (msg) { alert(JSON.stringify(msg)); }
+                                    });
+                                
+                                }
+
 
                         } else {
 
