--- a/NOVA/Views/Satis/Index.cshtml
+++ b/NOVA/Views/Satis/Index.cshtml
@@ -4,7 +4,6 @@
 
 
 <link href="~/Content/bootstrap-table-master/dist/bootstrap-table.min.css" rel="stylesheet" />
-<link href="~/Content/table/bootstrap-table.min.css" rel="stylesheet" />
 <link href="~/Content/table/placeholder-loading.min.css" rel="stylesheet" />
 <link href="~/assets/vendor/css/font-awesome.min.css" rel="stylesheet" />
 <link href="~/Scripts/select2.css" rel="stylesheet" />
@@ -95,6 +94,9 @@
 
         .menu2 {
             display: none;
+        }
+        body {
+            padding: 0 0 0 2rem !important;
         }
     }
 </style>
