--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -86,6 +86,9 @@
         .menu2 {
             display: none;
         }
+        body {
+            padding: 0 0 0 2rem !important;
+        }
         /* .btn-group {
             display: none;
         }*/
@@ -323,6 +326,9 @@
                 $('#table').bootstrapTable("destroy");
                 $('#table').bootstrapTable({ data: data })
             }).done(function () {
+                document.querySelectorAll('input[type="search"]')[0].onkeyup = function (e) {
+                    document.querySelectorAll('input[type="search"]')[0].value = e.currentTarget.value.replaceAll("ı", "I").replaceAll("i", "İ").toUpperCase();
+                };
                 HideProgress();
             });
 
@@ -359,10 +365,6 @@
             $('#plasiyer').select2({ placeholder: "Plasiyer Adı" });
             $('#dovtip').select2({ placeholder: "Döviz Tipi" });
 
-        }).then(function () {
-            document.querySelectorAll('input[type="search"]')[0].onkeyup = function () {
-                document.querySelectorAll('input[type="search"]')[0].value = event.currentTarget.value.replaceAll("ı", "I").replaceAll("i", "İ").toUpperCase();
-            };
         })
 
 
