--- a/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
+++ b/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
@@ -129,7 +129,6 @@
     <!-- Overlay -->
     <div class="layout-overlay layout-menu-toggle"></div>
     <script src="~/Content/bootstrap-table-master/dist/bootstrap-table.min.js"></script>
-    <script src="~/Content/bootstrap-table-master/dist/extensions/export/bootstrap-table-export.min.js"></script>
     <script src="~/Content/bootstrap-table-master/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
     <script src="~/Content/bootstrap-table-master/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
     <script src="~/Content/bootstrap-table-master/dist/extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
@@ -137,9 +136,11 @@
     <script src="~/Content/bootstrap-table-master/dist/extensions/reorder-rows/bootstrap-table-reorder-rows.js"></script>
     <script src="~/Content/bootstrap-table-master/dist/extensions/group-by-v2/bootstrap-table-group-by.min.js"></script>
     <script src="~/Content/bootstrap-table-master/dist/locale/bootstrap-table-tr-TR.min.js"></script>
-
-    <script src="~/jsPDF/jspdf.umd.min.js"></script>
-    <script src="~/jsPDF/polyfills.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/tableExport.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF/jspdf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/extensions/export/bootstrap-table-export.min.js"></script>
+    <script src="~/Scripts/xlsx.core.min.js"></script>
 
 
     <!-- Core JS -->
