--- a/NOVA/Views/Satis/FabrikaStok.cshtml
+++ b/NOVA/Views/Satis/FabrikaStok.cshtml
@@ -292,9 +292,10 @@
                        data-buttons-order="['paginationSwitch', 'columns', 'filterTable']"
                        data-toggle="table"
                        data-toolbar="#toolbar"
-                       data-show-export="false"
+                       data-show-export="true"
                        data-export-data-type="all"
-                       data-export-types="['excel', 'pdf']"
+                       data-export-types="['xlsx']"
+                       data-export-options='{"fileName": "Fabrika_Stok"}'
                        data-pagination="false"
                        data-search="true"
                        data-show-columns="true"
